1. 升级依赖，2.全局 skip spring 打包,3. 代码优化